Remove counseling domain, entity, and UI components.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.sql.init.data-locations=classpath:db/migration/data.sql
 
 # Logging
 logging.level.root=INFO
-logging.level.com.wrms.nt=DEBUG
+logging.level.com.wrms.newtype=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
 
 # Vaadin
